fix: misaligned spinner icons in NumericTextBox. telerik/kendo-ui-core#2643

--- a/styles/web/kendo.common-bootstrap.core.less
+++ b/styles/web/kendo.common-bootstrap.core.less
@@ -92,7 +92,7 @@ input.k-textbox {
 }
 
 .k-numerictextbox .k-link {
-    height: 1.15em;
+    height: 1.167em;
 }
 
 .k-webkit .k-rtl .k-widget .k-dropdown-wrap .k-input,
