--- a/styles/web/kendo.common-nova.core.less
+++ b/styles/web/kendo.common-nova.core.less
@@ -348,9 +348,7 @@
 
 .k-numerictextbox .k-link {
     display: block;
-    padding-top: .16em;
-    //height: ((@input-height + 0.354em) / 2);
-    line-height: 1.357em;
+    height: ((@input-height + 0.354em) / 2);
 }
 
 .k-numerictextbox .k-link .k-i-arrow-60-up {
